kernel/build_errors_2.log
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   D:\GitHub\AetherOS\kernel\Cargo.toml
workspace: D:\GitHub\AetherOS\Cargo.toml
warning: virtual workspace defaulting to `resolver = "1"` despite one or more workspace members being on edition 2021 which implies `resolver = "2"`
  |
  = note: to keep the current resolver, specify `workspace.resolver = "1"` in the workspace root's manifest
  = note: to use the edition 2021 resolver, specify `workspace.resolver = "2"` in the workspace root's manifest
  = note: for more details see https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
   Compiling aetheros-kernel v1.4.0 (D:\GitHub\AetherOS\kernel)
warning: unused import: `core::marker::PhantomData`
 --> kernel\src\memory\paging.rs:4:5
  |
4 | use core::marker::PhantomData;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `puts` found for reference `&dyn Platform` in the current scope
  --> kernel\src\lib.rs:58:26
   |
58 |                 platform.puts("DTB found at: ");
   |                          ^^^^ method not found in `&dyn Platform`

error[E0599]: no method named `puts` found for reference `&dyn Platform` in the current scope
  --> kernel\src\lib.rs:60:26
   |
60 |                 platform.puts("0x");
   |                          ^^^^ method not found in `&dyn Platform`

error[E0599]: no method named `puts` found for reference `&dyn Platform` in the current scope
  --> kernel\src\lib.rs:62:26
   |
62 |                 platform.puts("...\r\n");
   |                          ^^^^ method not found in `&dyn Platform`

error[E0599]: no method named `puts` found for reference `&dyn Platform` in the current scope
  --> kernel\src\lib.rs:67:30
   |
67 |                     platform.puts("Valid DTB detected. Size: ");
   |                              ^^^^ method not found in `&dyn Platform`

error[E0599]: no method named `puts` found for reference `&dyn Platform` in the current scope
  --> kernel\src\lib.rs:69:30
   |
69 |                     platform.puts(" bytes\r\n");
   |                              ^^^^ method not found in `&dyn Platform`

error[E0599]: no method named `puts` found for reference `&dyn Platform` in the current scope
  --> kernel\src\lib.rs:76:30
   |
76 |                     platform.puts("DTB Traversal OK\r\n");
   |                              ^^^^ method not found in `&dyn Platform`

error[E0599]: no method named `puts` found for reference `&dyn Platform` in the current scope
  --> kernel\src\lib.rs:78:30
   |
78 |                     platform.puts("Invalid DTB Header\r\n");
   |                              ^^^^ method not found in `&dyn Platform`

error[E0599]: no method named `puts` found for reference `&dyn Platform` in the current scope
  --> kernel\src\lib.rs:81:26
   |
81 |                 platform.puts("No DTB provided (x0 = 0)\r\n");
   |                          ^^^^ method not found in `&dyn Platform`

warning: unused import: `hal::Platform`
  --> kernel\src\lib.rs:13:5
   |
13 | use hal::Platform; // Import trait for kernel_init usage
   |     ^^^^^^^^^^^^^

warning: variable `scheduled` is assigned to, but never used
   --> kernel\src\scheduler\active_objects.rs:191:13
    |
191 |         let mut scheduled = 0;
    |             ^^^^^^^^^^^^^
    |
    = note: consider using `_scheduled` instead
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `msg`
   --> kernel\src\scheduler\active_objects.rs:205:37
    |
205 |                         if let Some(msg) = obj.get_message() {
    |                                     ^^^ help: if this is intentional, prefix it with an underscore: `_msg`

warning: value assigned to `scheduled` is never read
   --> kernel\src\scheduler\active_objects.rs:207:29
    |
207 | ...                   scheduled += 1;
    |                       ^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unnecessary `unsafe` block
  --> kernel\src\hal\stub.rs:29:9
   |
29 |         unsafe {
   |         ^^^^^^ unnecessary `unsafe` block
   |
   = note: `#[warn(unused_unsafe)]` (part of `#[warn(unused)]`) on by default

warning: unnecessary `unsafe` block
  --> kernel\src\debug\gdb_stub.rs:77:13
   |
77 |             unsafe {
   |             ^^^^^^ unnecessary `unsafe` block

warning: unnecessary `unsafe` block
  --> kernel\src\testing\mod.rs:46:5
   |
46 |     unsafe {
   |     ^^^^^^ unnecessary `unsafe` block

For more information about this error, try `rustc --explain E0599`.
warning: `aetheros-kernel` (lib) generated 8 warnings
error: could not compile `aetheros-kernel` (lib) due to 8 previous errors; 8 warnings emitted
